OhioTrackStats/Grammar/HyTekParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\C\antlr4\HyTek\HyTek.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class HyTekParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WS=1, ATSIGN=2, SEMICOLON=3, TOPINFO=4, SEPARATOR=5, FINALSKIP=6, PRELIMS=7, 
		NOWINDPARENS=8, EVENTNUMBER=9, LICENSEDTO=10, RESULTS=11, EVENT=12, INTEGER_NUMBER=13, 
		GIRLS=14, BOYS=15, FINALS=16, PRELIMINARIES=17, DOT=18, METERS=19, NOWIND=20, 
		LPAREN=21, RPAREN=22, DASH=23, APOSTROPHE=24, COLON=25, FALSESTART=26, 
		NOHEIGHT=27, DISQUALIFIED=28, FOUL=29, NOTIME=30, DIDNOTFINISH=31, INTERFERENCE=32, 
		TIE=33, AM=34, PM=35, SLASH=36, NUMBERSIGN=37, QUALIFY=38, RECORD=39, 
		PASS=40, FAIL=41, CLEAR=42, OUTOFZONE=43, SCRATCH=44, NODISTANCE=45, DQPLACE=46, 
		INT=47, ID=48, NEWLINE=49;
	public const int
		RULE_init = 0, RULE_event = 1, RULE_eventInfo = 2, RULE_eventGender = 3, 
		RULE_eventName = 4, RULE_columnHeadersf = 5, RULE_eventResult = 6, RULE_individualResult = 7, 
		RULE_throwawayResult = 8, RULE_trials = 9, RULE_heightResults = 10, RULE_relayResult = 11, 
		RULE_metric = 12, RULE_wind = 13, RULE_legInfo = 14, RULE_leg = 15, RULE_legNumber = 16, 
		RULE_place = 17, RULE_jerseyNumber = 18, RULE_athleteName = 19, RULE_athleteYear = 20, 
		RULE_schoolName = 21, RULE_seed = 22, RULE_time = 23, RULE_distance = 24, 
		RULE_dq = 25, RULE_dqReason = 26, RULE_performance = 27, RULE_heatNumber = 28, 
		RULE_points = 29, RULE_tiebreaker = 30, RULE_hour = 31, RULE_minute = 32, 
		RULE_second = 33, RULE_decimal = 34, RULE_period = 35, RULE_day = 36, 
		RULE_month = 37, RULE_year = 38, RULE_date = 39, RULE_clockTime = 40, 
		RULE_foot = 41, RULE_inch = 42, RULE_number = 43, RULE_words = 44;
	public static readonly string[] ruleNames = {
		"init", "event", "eventInfo", "eventGender", "eventName", "columnHeadersf", 
		"eventResult", "individualResult", "throwawayResult", "trials", "heightResults", 
		"relayResult", "metric", "wind", "legInfo", "leg", "legNumber", "place", 
		"jerseyNumber", "athleteName", "athleteYear", "schoolName", "seed", "time", 
		"distance", "dq", "dqReason", "performance", "heatNumber", "points", "tiebreaker", 
		"hour", "minute", "second", "decimal", "period", "day", "month", "year", 
		"date", "clockTime", "foot", "inch", "number", "words"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'@'", "';'", null, null, null, null, "'(NWI)'", null, "'Licensed to'", 
		"'Results'", "'Event'", null, "'Girls'", "'Boys'", "'Finals'", "'Preliminaries'", 
		"'.'", "'m'", "'NWI'", "'('", "')'", "'-'", "'''", "':'", "'FS'", "'NH'", 
		"'DQ'", "'FOUL'", "'NT'", "'DNF'", "'Interference'", "'J'", "'AM'", "'PM'", 
		"'/'", "'#'", null, null, null, null, null, "'Out of Zone'", "'SCR'", 
		"'ND'", "'--'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "ATSIGN", "SEMICOLON", "TOPINFO", "SEPARATOR", "FINALSKIP", 
		"PRELIMS", "NOWINDPARENS", "EVENTNUMBER", "LICENSEDTO", "RESULTS", "EVENT", 
		"INTEGER_NUMBER", "GIRLS", "BOYS", "FINALS", "PRELIMINARIES", "DOT", "METERS", 
		"NOWIND", "LPAREN", "RPAREN", "DASH", "APOSTROPHE", "COLON", "FALSESTART", 
		"NOHEIGHT", "DISQUALIFIED", "FOUL", "NOTIME", "DIDNOTFINISH", "INTERFERENCE", 
		"TIE", "AM", "PM", "SLASH", "NUMBERSIGN", "QUALIFY", "RECORD", "PASS", 
		"FAIL", "CLEAR", "OUTOFZONE", "SCRATCH", "NODISTANCE", "DQPLACE", "INT", 
		"ID", "NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "HyTek.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static HyTekParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public HyTekParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public HyTekParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class InitContext : ParserRuleContext {
		public EventContext[] @event() {
			return GetRuleContexts<EventContext>();
		}
		public EventContext @event(int i) {
			return GetRuleContext<EventContext>(i);
		}
		public InitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_init; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterInit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitInit(this);
		}
	}

	[RuleVersion(0)]
	public InitContext init() {
		InitContext _localctx = new InitContext(Context, State);
		EnterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 90; @event();
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==GIRLS || _la==BOYS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventContext : ParserRuleContext {
		public EventInfoContext eventInfo() {
			return GetRuleContext<EventInfoContext>(0);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(HyTekParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(HyTekParser.NEWLINE, i);
		}
		public EventResultContext[] eventResult() {
			return GetRuleContexts<EventResultContext>();
		}
		public EventResultContext eventResult(int i) {
			return GetRuleContext<EventResultContext>(i);
		}
		public EventContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_event; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterEvent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitEvent(this);
		}
	}

	[RuleVersion(0)]
	public EventContext @event() {
		EventContext _localctx = new EventContext(Context, State);
		EnterRule(_localctx, 2, RULE_event);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; eventInfo();
			State = 96; Match(NEWLINE);
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 97; eventResult();
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==INTEGER_NUMBER || _la==DQPLACE );
			State = 102; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventInfoContext : ParserRuleContext {
		public EventGenderContext eventGender() {
			return GetRuleContext<EventGenderContext>(0);
		}
		public EventNameContext eventName() {
			return GetRuleContext<EventNameContext>(0);
		}
		public EventInfoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventInfo; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterEventInfo(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitEventInfo(this);
		}
	}

	[RuleVersion(0)]
	public EventInfoContext eventInfo() {
		EventInfoContext _localctx = new EventInfoContext(Context, State);
		EnterRule(_localctx, 4, RULE_eventInfo);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; eventGender();
			State = 105; eventName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventGenderContext : ParserRuleContext {
		public ITerminalNode GIRLS() { return GetToken(HyTekParser.GIRLS, 0); }
		public ITerminalNode BOYS() { return GetToken(HyTekParser.BOYS, 0); }
		public EventGenderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventGender; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterEventGender(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitEventGender(this);
		}
	}

	[RuleVersion(0)]
	public EventGenderContext eventGender() {
		EventGenderContext _localctx = new EventGenderContext(Context, State);
		EnterRule(_localctx, 6, RULE_eventGender);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			_la = TokenStream.LA(1);
			if ( !(_la==GIRLS || _la==BOYS) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventNameContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(HyTekParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(HyTekParser.ID, i);
		}
		public NumberContext[] number() {
			return GetRuleContexts<NumberContext>();
		}
		public NumberContext number(int i) {
			return GetRuleContext<NumberContext>(i);
		}
		public EventNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterEventName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitEventName(this);
		}
	}

	[RuleVersion(0)]
	public EventNameContext eventName() {
		EventNameContext _localctx = new EventNameContext(Context, State);
		EnterRule(_localctx, 8, RULE_eventName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 111;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case ID:
					{
					State = 109; Match(ID);
					}
					break;
				case INTEGER_NUMBER:
					{
					State = 110; number();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==INTEGER_NUMBER || _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColumnHeadersfContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(HyTekParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(HyTekParser.ID, i);
		}
		public NumberContext[] number() {
			return GetRuleContexts<NumberContext>();
		}
		public NumberContext number(int i) {
			return GetRuleContext<NumberContext>(i);
		}
		public ColumnHeadersfContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_columnHeadersf; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterColumnHeadersf(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitColumnHeadersf(this);
		}
	}

	[RuleVersion(0)]
	public ColumnHeadersfContext columnHeadersf() {
		ColumnHeadersfContext _localctx = new ColumnHeadersfContext(Context, State);
		EnterRule(_localctx, 10, RULE_columnHeadersf);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 117;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case ID:
					{
					State = 115; Match(ID);
					}
					break;
				case INTEGER_NUMBER:
					{
					State = 116; number();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==INTEGER_NUMBER || _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventResultContext : ParserRuleContext {
		public IndividualResultContext individualResult() {
			return GetRuleContext<IndividualResultContext>(0);
		}
		public ThrowawayResultContext throwawayResult() {
			return GetRuleContext<ThrowawayResultContext>(0);
		}
		public RelayResultContext relayResult() {
			return GetRuleContext<RelayResultContext>(0);
		}
		public EventResultContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventResult; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterEventResult(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitEventResult(this);
		}
	}

	[RuleVersion(0)]
	public EventResultContext eventResult() {
		EventResultContext _localctx = new EventResultContext(Context, State);
		EnterRule(_localctx, 12, RULE_eventResult);
		try {
			State = 124;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 121; individualResult();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122; throwawayResult();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 123; relayResult();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IndividualResultContext : ParserRuleContext {
		public PlaceContext place() {
			return GetRuleContext<PlaceContext>(0);
		}
		public AthleteNameContext athleteName() {
			return GetRuleContext<AthleteNameContext>(0);
		}
		public SchoolNameContext schoolName() {
			return GetRuleContext<SchoolNameContext>(0);
		}
		public PerformanceContext performance() {
			return GetRuleContext<PerformanceContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(HyTekParser.NEWLINE, 0); }
		public JerseyNumberContext jerseyNumber() {
			return GetRuleContext<JerseyNumberContext>(0);
		}
		public AthleteYearContext athleteYear() {
			return GetRuleContext<AthleteYearContext>(0);
		}
		public SeedContext seed() {
			return GetRuleContext<SeedContext>(0);
		}
		public ITerminalNode NUMBERSIGN() { return GetToken(HyTekParser.NUMBERSIGN, 0); }
		public MetricContext metric() {
			return GetRuleContext<MetricContext>(0);
		}
		public WindContext wind() {
			return GetRuleContext<WindContext>(0);
		}
		public HeatNumberContext heatNumber() {
			return GetRuleContext<HeatNumberContext>(0);
		}
		public DqReasonContext dqReason() {
			return GetRuleContext<DqReasonContext>(0);
		}
		public PointsContext points() {
			return GetRuleContext<PointsContext>(0);
		}
		public TiebreakerContext tiebreaker() {
			return GetRuleContext<TiebreakerContext>(0);
		}
		public TrialsContext trials() {
			return GetRuleContext<TrialsContext>(0);
		}
		public HeightResultsContext heightResults() {
			return GetRuleContext<HeightResultsContext>(0);
		}
		public IndividualResultContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_individualResult; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterIndividualResult(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitIndividualResult(this);
		}
	}

	[RuleVersion(0)]
	public IndividualResultContext individualResult() {
		IndividualResultContext _localctx = new IndividualResultContext(Context, State);
		EnterRule(_localctx, 14, RULE_individualResult);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126; place();
			State = 128;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 127; jerseyNumber();
				}
				break;
			}
			State = 130; athleteName();
			State = 132;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				{
				State = 131; athleteYear();
				}
				break;
			}
			State = 134; schoolName();
			State = 136;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 135; seed();
				}
				break;
			}
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NUMBERSIGN) {
				{
				State = 138; Match(NUMBERSIGN);
				}
			}

			State = 141; performance();
			State = 143;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 142; metric();
				}
				break;
			}
			State = 146;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				{
				State = 145; wind();
				}
				break;
			}
			State = 149;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				{
				State = 148; heatNumber();
				}
				break;
			}
			State = 152;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==OUTOFZONE) {
				{
				State = 151; dqReason();
				}
			}

			State = 155;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,15,Context) ) {
			case 1:
				{
				State = 154; points();
				}
				break;
			}
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INTEGER_NUMBER) {
				{
				State = 157; tiebreaker();
				}
			}

			State = 160; Match(NEWLINE);
			State = 162;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,17,Context) ) {
			case 1:
				{
				State = 161; trials();
				}
				break;
			}
			State = 165;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PASS) | (1L << FAIL) | (1L << CLEAR))) != 0)) {
				{
				State = 164; heightResults();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ThrowawayResultContext : ParserRuleContext {
		public PlaceContext place() {
			return GetRuleContext<PlaceContext>(0);
		}
		public AthleteNameContext athleteName() {
			return GetRuleContext<AthleteNameContext>(0);
		}
		public SchoolNameContext schoolName() {
			return GetRuleContext<SchoolNameContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(HyTekParser.NEWLINE, 0); }
		public JerseyNumberContext jerseyNumber() {
			return GetRuleContext<JerseyNumberContext>(0);
		}
		public AthleteYearContext athleteYear() {
			return GetRuleContext<AthleteYearContext>(0);
		}
		public ThrowawayResultContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_throwawayResult; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterThrowawayResult(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitThrowawayResult(this);
		}
	}

	[RuleVersion(0)]
	public ThrowawayResultContext throwawayResult() {
		ThrowawayResultContext _localctx = new ThrowawayResultContext(Context, State);
		EnterRule(_localctx, 16, RULE_throwawayResult);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167; place();
			State = 169;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,19,Context) ) {
			case 1:
				{
				State = 168; jerseyNumber();
				}
				break;
			}
			State = 171; athleteName();
			State = 173;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INTEGER_NUMBER) {
				{
				State = 172; athleteYear();
				}
			}

			State = 175; schoolName();
			State = 176; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TrialsContext : ParserRuleContext {
		public PerformanceContext[] performance() {
			return GetRuleContexts<PerformanceContext>();
		}
		public PerformanceContext performance(int i) {
			return GetRuleContext<PerformanceContext>(i);
		}
		public ITerminalNode NEWLINE() { return GetToken(HyTekParser.NEWLINE, 0); }
		public TrialsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_trials; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterTrials(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitTrials(this);
		}
	}

	[RuleVersion(0)]
	public TrialsContext trials() {
		TrialsContext _localctx = new TrialsContext(Context, State);
		EnterRule(_localctx, 18, RULE_trials);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 179;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 178; performance();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 181;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,21,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 184;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,22,Context) ) {
			case 1:
				{
				State = 183; Match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeightResultsContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(HyTekParser.NEWLINE, 0); }
		public ITerminalNode[] PASS() { return GetTokens(HyTekParser.PASS); }
		public ITerminalNode PASS(int i) {
			return GetToken(HyTekParser.PASS, i);
		}
		public ITerminalNode[] CLEAR() { return GetTokens(HyTekParser.CLEAR); }
		public ITerminalNode CLEAR(int i) {
			return GetToken(HyTekParser.CLEAR, i);
		}
		public ITerminalNode[] FAIL() { return GetTokens(HyTekParser.FAIL); }
		public ITerminalNode FAIL(int i) {
			return GetToken(HyTekParser.FAIL, i);
		}
		public HeightResultsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heightResults; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.EnterHeightResults(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHyTekListener typedListener = listener as IHyTekListener;
			if (typedListener != null) typedListener.ExitHeightResults(this);
		}
	}
